--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "history": "^2.1.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-router": "^2.3.0"
+    "react-router": "^2.3.0",
+    "onsenui": "^2.0.0",
+    "react-onsenui": "^0.7.3"
+    
   }
 }
